[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/joystick.png" type="Texture" id=1]
[ext_resource path="res://src/TouchControlls.gd" type="Script" id=2]
[ext_resource path="res://assets/inner_joystick_circle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 69.0

[node name="TouchControlls" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="LeftJoystick" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.435294 )
position = Vector2( 27.9493, 439.566 )
normal = ExtResource( 1 )
shape = SubResource( 1 )
visibility_mode = 1

[node name="InnerCircle" type="Sprite" parent="LeftJoystick"]
visible = false
position = Vector2( 67.4132, 71.7625 )
texture = ExtResource( 3 )

[node name="RightJoystick" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.435294 )
position = Vector2( 853.963, 439.566 )
normal = ExtResource( 1 )
shape = SubResource( 1 )
visibility_mode = 1

[node name="InnerCircle" type="Sprite" parent="RightJoystick"]
visible = false
position = Vector2( 67.4132, 71.7625 )
texture = ExtResource( 3 )

[node name="FireButton" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.435294 )
position = Vector2( 768.081, 480.284 )
scale = Vector2( 1.7008, 1.7008 )
normal = ExtResource( 3 )
visibility_mode = 1
